task markup addition ready

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <div id="container">
       <div id="header">
         <div>
-          <h3 id="dateSection">Day, <span id="date">Date</span></h3>
-          <p id="month">Month</p>
+          <h3 id="dateSection"></h3>
+          <p id="month"></p>
         </div>
-        <p id="taskCount">Total Task count</p>
+        <p id="taskCount"></p>
       </div>
       <button id="openModalBtn">
         <img src="./image/add_white_24dp.svg" id="addBtnImage" alt="add" />
@@ -23,16 +23,7 @@
           >
           <button id="deleteAll">Delete all</button>
         </div>
-        <ul id="pendingTaskList">
-          <li>
-            <div class="leftSection">
-              <input type="checkbox" name="select" class="selectTask" />
-              <span class="taskDescription">Hello This is a demo task</span>
-            </div>
-            <span class="taskTime">Time</span>
-            <img src="image/delete.svg" id="deleteTask" alt="deleteTask" />
-          </li>
-        </ul>
+        <ul id="pendingTaskList"></ul>
       </div>
     </div>
     <div id="taskInputContainer" class="hide">
