implement modal handling,task adding

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </div>
     </div>
     <div id="taskInputContainer" class="hide">
+      <button id="closeModal"><img src="./image/back.svg" /></button>
       <p id="taskInputHeader">Add New Task</p>
       <div id="taskInputSection">
         <input
@@ -37,7 +38,7 @@
         />
         <!--button for adding task with only description-->
         <button id="addBtn">
-          <img src="/image/add_white_24dp.svg" alt="add task" />
+          <img src="/image/add_white_24dp.svg" alt="add task" id="addTaskDesc"/>
         </button>
       </div>
       <div id="taskInfo">
