date and time input validated

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         />
         <!--button for adding task with only description-->
         <button id="addBtn">
-          <img src="/image/add_white_24dp.svg" alt="add task" id="addTaskDesc"/>
+          <img
+            src="/image/add_white_24dp.svg"
+            alt="add task"
+            id="addTaskDesc"
+          />
         </button>
       </div>
       <div id="taskInfo">
